Recompile JavaConfigurator.jar for Java 8 compatibility